# detectorist

./: .gitignore  FAQ.md  README.md  pyproject.toml
.github/workflows/: build.yml
detectorist/: about_dialog.py  about_dialog.ui  detector.py  image_label.py  image_object.py  image_utils.py  main.py  model_viewer.py  model_viewer_gui.py  model_viewer_gui.ui  utils.py
modelviewer/: about_dialog.py  about_dialog.ui  detector.py  exif.py  exif_wrapper.py  image.py  image_label.py  image_object.py  image_utils.py  main.py  model_viewer.py  model_viewer_gui.py  model_viewer_gui.ui  structures.py
scripts/: png2ico.py
